# party-up

./: .gitignore  Makefile  build.boot  pyproject.toml
example/: build.boot
example/src/example/: core.clj  random.clj
party-up/: build.boot
party-up-ui/: build.boot
party-up-ui/src/party_up_ui/: curves.clj
party-up-ui/src/party_up_ui/devices/: mirror_wash.clj
party-up/src/example/: curves.clj  panel.clj
party-up/src/party_up/: curves.clj
party-up/src/party_up/devices/: min_wash.clj  mirror_wash.clj
party-up/test/party_up/: curves_test.clj
party_up/: main.py  main2.py  test_universe.py  tui.py  tui2.py  universe.py  universe2.py
party_up/fixture/: base.py  chauvet.py  test_base.py  test_chauvet.py
party_up/output/: base.py  dmx.py  test_base.py
src/example/: curves.clj  matrix.clj  panel.clj  view.clj
src/party_up/: core.clj  curves.clj  devices.clj  example.clj  matrix.clj  matrix_preview.clj  universe.clj
src/party_up/devices/: mirror_wash.clj
test/party_up/: core_test.clj  curves_test.clj
test/party_up/devices/: mirror_wash_test.clj
